# sync-dotfiles-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  config.ron
examples/: config.ron
examples/local_configs_dir/: create-random-folders.sh
src/: args.rs  config.rs  dotconfig.rs  fixpath.rs  hash.rs  hasher.rs  lib.rs  main.rs  utils.rs
