[package]
name = "sync-dotfiles-rs"
version = "0.1.8"
authors = ["Utsav Balar <utsavbalar1231@gmail.com>"]
edition = "2021"
description = "Easily sync dotfiles from a source directory to a destination directory as per your configuration"

[dependencies]
anyhow = "1.0"
home = "0.5"
rayon = "1.7"
ron = "0.8"
sha1 = "0.10"
walkdir = "2.3"
lazy_static = "1.4"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.clap]
version = "4.4"
features = ["derive"]

[dependencies.digest]
version = "0.10"
features = ["alloc"]
