[package]
name = "sync-dotfiles-rs"
version = "0.1.8"
authors = ["Utsav Balar <utsavbalar1231@gmail.com>"]
categories = ["command-line-utilities"]
edition = "2021"
keywords = ["dotfiles", "config", "sync"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Easily sync dotfiles across machines"

[dependencies]
anyhow = "1.0"
home = "0.5"
lazy_static = "1.4"
rayon = "1.7"
ron = "0.8"
sha1 = "0.10"
walkdir = "2.3"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.clap]
version = "4.4"
features = ["derive"]

[dependencies.digest]
version = "0.10"
features = ["alloc"]
